# agent.d

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.vitepress/: config.mts
.vitepress/theme/: AgentHome.vue  index.ts  style.css
crates/ai/: Cargo.toml  README.md
crates/ai/src/: lib.rs  registry.rs  types.rs
crates/ai/src/providers/: claude_api.rs  claude_cli.rs  codex_app_server.rs  codex_cli.rs  mock.rs  mod.rs  openai_api.rs
crates/ai/tests/: claude_api_integration.rs  claude_cli.rs  claude_cli_loop.rs  cli_nested_schema.rs  codex_app_server.rs  codex_app_server_tools.rs  codex_cli.rs  mock.rs  openai_compatible.rs  provider_parity.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs
crates/api/tests/: control.rs  ws_roundtrip.rs
crates/approvals/: Cargo.toml  README.md
crates/approvals/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  commands.rs  grants.rs  main.rs  packages.rs  render.rs  secret.rs  ws.rs
crates/codex/: Cargo.toml  README.md
crates/codex/src/: lib.rs  protocol.rs
crates/codex/tests/: live_text.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: config.rs  elevate.rs  main.rs  runtime.rs  watch.rs
crates/executor/: Cargo.toml  README.md
crates/executor/src/: lib.rs
crates/executor/tests/: approvals.rs  dispatcher_check_grants.rs  preflight.rs  runner_live_cli.rs  runner_tool_loop.rs
crates/fs/: Cargo.toml  README.md
crates/fs/src/: lib.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: lib.rs
crates/http/tests/: integration.rs
crates/luals/: Cargo.toml
crates/luals/assets/: agentd.lua.stub
crates/luals/src/: lib.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: lib.rs
crates/memory/: Cargo.toml  README.md
crates/memory/src/: lib.rs  redb_store.rs
crates/net/: Cargo.toml
crates/net/src/: http.rs  lib.rs  mailer.rs  ws.rs
crates/netbroker/: Cargo.toml
crates/netbroker/src/: main.rs
crates/permissions/: Cargo.toml  README.md
crates/permissions/src/: engine.rs  grants.rs  lib.rs  model.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs
crates/runners/: Cargo.toml  README.md
crates/runners/src/: lib.rs
crates/scripting/: Cargo.toml  README.md
crates/scripting/src/: channels.rs  helpers.lua  lib.rs  luaerr.rs  mailer.rs  sandbox.rs  scheduler.rs
crates/scripting/tests/: async_await.rs  caller.rs  channels.rs  context.rs  context_p2.rs  context_p3.rs  context_p4_ws.rs  cwd.rs  helpers.rs  import.rs  json.rs  mailer.rs  manifest.rs  memory.rs  package_e2e.rs  package_import.rs  parallel_structured.rs  runners.rs  schema.rs  sleep_and_ws.rs
crates/secrets/: Cargo.toml  README.md
crates/secrets/src/: lib.rs
crates/secrets/tests/: keyring_smoke.rs
crates/services/: Cargo.toml  README.md
crates/services/src/: lib.rs
crates/shell/: Cargo.toml  README.md
crates/shell/src/: dns_pin.rs  dns_wire.rs  gateway.rs  lib.rs  netbroker.rs  policy.rs
crates/shell/src/netfilter/: mock.rs  mod.rs  nftables.rs  permitset.rs
crates/shell/src/proxy/: host.rs  mod.rs  relay.rs
crates/shell/src/sandbox/: linux.rs  linux_net.rs  linux_transparent.rs  macos.rs  macos_install.rs  macos_pf.rs  macos_pf_rules.rs  macos_transparent.rs  mod.rs  seccomp_linux.rs  unsupported.rs  windows.rs  windows_wfp.rs
crates/shell/src/sandbox/macos_broker/: config.rs  mod.rs  pool.rs  proto.rs  server.rs
crates/shell/tests/: netns_linux.rs  proxy.rs  sandbox_escape_linux.rs  sandbox_escape_macos.rs  sandbox_linux.rs  sandbox_windows.rs  transparent_linux.rs  transparent_macos.rs
crates/skills/: Cargo.toml  README.md
crates/skills/src/: lib.rs
crates/trace/: Cargo.toml  README.md
crates/trace/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: approval.rs  lib.rs
crates/ws/: Cargo.toml  README.md
crates/ws/src/: lib.rs
crates/ws/tests/: integration.rs
docs/: index.md
docs/v0/concepts/: index.md  interfaces-and-callers.md  memory-and-state.md  permissions.md  runners.md  runtime.md  services.md  skills.md  tools-and-actions.md
docs/v0/contributing/: architecture.md
docs/v0/guide/: how-it-works.md  installation.md  quick-start.md  what-is-agentd.md
docs/v0/operations/: deployment.md  observability.md  troubleshooting.md
docs/v0/providers/: anthropic.md  cli-backends.md  codex.md  credentials.md  custom.md  index.md  mcp.md  openai.md
docs/v0/recipes/: code-review.md  discord-bot.md  http-tool.md  index.md  per-user-memory.md  webhook.md
docs/v0/reference/: cli.md  configuration.md  glossary.md  protocol.md
docs/v0/reference/ctx/: ai.md  caller.md  calls.md  concurrency.md  fs.md  http.md  index.md  logging.md  mailer.md  memory.md  secrets.md  shell.md  stdlib.md  websocket.md
docs/v0/security/: approvals.md  best-practices.md  grants.md  permission-slugs.md  sandbox.md
docs/v0/tutorial/: calling.md  config-directory.md  dev-loop.md  first-tool.md  index.md  permissions.md  project-layout.md  runner-and-skill.md
docs/v0/writing/: context.md  init.md  runners.md  services.md  skills.md  tools.md
examples/: config.toml  grants.toml  init.lua
examples/discord/: README.md  grants.toml  init.lua
examples/runners/: backend_reviewer.lua
examples/skills/: reviewer.md  scorer.md
examples/tools/: git.lua
