[package]
name = "agentd-api"
version.workspace = true
edition.workspace = true

[dependencies]
agentd-ai.workspace = true
agentd-approvals.workspace = true
agentd-executor.workspace = true
agentd-permissions.workspace = true
agentd-runners.workspace = true
agentd-skills.workspace = true
agentd-types.workspace = true
axum = { version = "0.8.9", features = ["ws"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
agentd-approvals.workspace = true
agentd-scripting.workspace = true
agentd-trace.workspace = true
async-trait.workspace = true
futures-util = { workspace = true, features = ["std", "sink"] }
tempfile.workspace = true
tokio-tungstenite = { workspace = true, features = ["connect"] }
