[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentd"
path = "src/main.rs"

[dependencies]
agentd-ai.workspace = true
agentd-api.workspace = true
agentd-approvals.workspace = true
agentd-executor.workspace = true
agentd-luals.workspace = true
agentd-memory.workspace = true
agentd-packages.workspace = true
agentd-permissions.workspace = true
agentd-runners.workspace = true
agentd-scripting.workspace = true
agentd-secrets.workspace = true
agentd-shell.workspace = true
agentd-skills.workspace = true
agentd-trace.workspace = true
agentd-types.workspace = true
anyhow.workspace = true
arc-swap = "1.7"
clap.workspace = true
dirs.workspace = true
getrandom.workspace = true
notify = "8"
serde.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile.workspace = true
