[package]
name = "agentd-http"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["rustls", "json", "gzip"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url.workspace = true

[dev-dependencies]
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread"] }
