[package]
name = "agentd-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
agentd-ai.workspace = true
agentd-permissions.workspace = true
agentd-types.workspace = true
axum = "0.8.9"
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync", "macros"] }
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest = { workspace = true, features = ["rustls", "json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
