[package]
name = "agentd-net"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["rustls", "json", "gzip"] }
futures-util = { workspace = true, features = ["std", "sink"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { workspace = true, features = ["connect", "rustls-tls-webpki-roots"] }
url.workspace = true

[dev-dependencies]
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
futures-util = { workspace = true, features = ["std", "sink"] }
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "rt-multi-thread", "time"] }
