[package]
name = "agentd-runners"
version.workspace = true
edition.workspace = true

[dependencies]
agentd-ai.workspace = true
agentd-skills.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
