[package]
name = "agentd-secrets"
version.workspace = true
edition.workspace = true

[dependencies]
keyring-core = "1.0.0"
thiserror.workspace = true
zeroize = "1.8.2"

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"
