[package]
name = "agentd-shell"
version.workspace = true
edition.workspace = true

[dependencies]
agentd-permissions.workspace = true
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt-multi-thread", "net", "time", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"

[dev-dependencies]
tempfile = "3"
