[package]
name = "agentd-shell"
version.workspace = true
edition.workspace = true

[dependencies]
agentd-permissions.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt-multi-thread", "net", "time", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"
nix = { version = "0.29", features = ["sched", "socket", "user", "process", "fs", "mount", "net"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
