[package]
name = "agentd-shell"
version.workspace = true
edition.workspace = true

[dependencies]
agentd-permissions.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt-multi-thread", "net", "time", "sync"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"
nix = { version = "0.29", features = ["sched", "socket", "user", "process", "fs", "mount", "net"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Rpc",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
] }

[dev-dependencies]
tempfile = "3"
